2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* apps/hello-world/src/hello_world.c (int main): Print to
	stdout instead of stderr.

2015-01-13  Ola Jeppsson  <ola@adapteva.com>

	* test/e-standby-test/src/e-standby-test.c (int main): Call
	e_reset_system().
	(int my_reset_system): Rename to my_config_system(). Update
	for new ESYS API. Let e_reset_system() handle reset.
	* test/e-standby-test/test.sh: Do not redirect stdout.

2015-01-13  Ola Jeppsson  <ola@adapteva.com>

	* apps/e-init/src/e-init.c (int main): Update for new ESYS API.
	* apps/e-init/test.sh: Do not redirect stdout.

2015-01-13  Ola Jeppsson  <ola@adapteva.com>

	* errata/noc_fifo/build.sh: Link with e-loader.

2015-01-13  Ola Jeppsson  <ola@adapteva.com>

	* apps/e-dump-mem/src/e-dump-mem.c (int main): Call
	e_reset_system().
	* apps/e-dump-regs/src/e-dump-regs.c (int main): Likewise.
	* io/link_lowpower_mode/src/link_lowpower_mode.c (int main):
	Likewise.
	* labs/clockgating_mode/src/clockgating_mode.c (int main):
	Likewise.
	* test/e-mem-test/src/e-mem-test.c (int main): Likewise.
	* test/e-regfile-test/src/e-regfile-test.c (int main):
	Likewise.
	* test/e-mem-test/src/e-mem-test.c (int my_reset_system):
	Remove.
	* test/e-regfile-test/src/e-regfile-test.c (int
	my_reset_system): Likewise.

2014-11-04  Ola Jeppsson  <ola@adapteva.com>

	* cpu/arithmode/test.sh: Fix path in test script.

2014-10-31  Ola Jeppsson  <ola@adapteva.com>

	* scripts/build_and_test_all.sh: Fix segfault on exit in trap
	handler. Don't try to test examples when cross compiling.

2014-10-31  Ola Jeppsson  <ola@adapteva.com>

	* Create 2014.11 branch

2014-10-31  Ola Jeppsson  <ola@adapteva.com>

	* apps/eprime/build.sh: Fix cross compilation
	* apps/fft2d/build.sh: Fix build failure caused by missing directory


2014-10-30  Ola Jeppsson  <ola@adapteva.com>
	* dma/dma_2d/test.sh:
	* dma/dma_interrupt/test.sh:
	* dma/dma_message_read/test.sh:
	* dma/dma_message_write/test.sh:
	* dma/dma_slave/test.sh:
	Fix path problems

