@@ -1,5 +1,10 @@
 2015-01-15  Ola Jeppsson  <ola@adapteva.com>
 
+	* apps/hello-world/src/hello_world.c (int main): Attach to shm
+	segment if it already exists, instead of failing
+
+2015-01-15  Ola Jeppsson  <ola@adapteva.com>
+
 	* apps/hello-world/src/hello_world.c (int main): Print to
 	stdout instead of stderr.
 
